build(deps): update composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,13 @@
 {
-    "require": {
-        "africastalking/africastalking": "^3.0",
-        "vlucas/phpdotenv": "^5.6"
-    }
+    "name": "maithya/africans-talking-otp-system",
+    "description": "A simple and efficient One-Time Password (OTP) system built using Africa's Talking API. This repository provides a streamlined solution for generating, sending, and verifying OTPs, making it ideal for secure user authentication in applications.",
+    "type": "project",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "maithya",
+            "email": "bonn.dev254@gmail.com"
+        }
+    ],
+    "require": {}
 }
