--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,8 @@
     }
   ],
   "require": {
-    "php": "^8.1"
+    "php": "^8.1",
+    "africastalking/africastalking": "^3.0",
+    "vlucas/phpdotenv": "^5.6"
   }
 }
