--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     }
   ],
   "require": {
-    "php": "^8.1",
+    "php": "^7.2.5 || ^8.0",
     "africastalking/africastalking": "^3.0",
     "vlucas/phpdotenv": "^5.6"
   }
